<resources>
    <string name="app_name">IDN Option</string>
    <string name="facebook_app_id">186778342579957</string>
    <string name="fb_login_protocol_scheme">fb186778342579957</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    Notification-->
    <string name="push_notify">Push Notifications</string>
    <string name="push_notify_desc">Be notified about the lastest trading news via push \nnotification</string>
    <string name="email_notify">Email Notifications</string>
    <string name="email_notify_desc">Receive Emails about new platform features and big \nevents</string>
    <string name="promo">Promotions</string>
    <string name="tournaments">Tournaments</string>
    <string name="system_news">System News</string>
    <string name="analytical_reports">Analytical Reports</string>
    <string name="acc_activity">Account Activity</string>
    <string name="closed_trade">Closed trades</string>
    <string name="receive_rst">Receive results of trades even while you are away</string>
    <string name="succ_withdraw">Successful Withdrawal</string>
    <string name="request_approved">We will let you know once the request approved</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="rec_notification">Receive notification when your pending order get \nexecuted or canceled</string>
    <string name="margin_trading">Margin trading notifications</string>
    <string name="market_data">Market Data</string>
    <string name="market_news">Market News</string>
    <string name="latest_trading_news">Stay tuned for the latest trading news</string>
    <string name="prise_mnt">Prise movement</string>
    <string name="sharp_jump">Sharp jump/drop</string>
    <string name="rapid_access">Rapid access prise change</string>
    <string name="open_position">Open positions</string>
    <string name="rise_fall">Rise/fall notifications</string>
    <string name="rise_fall_next_level">We will let you know when your open positions \nrise/fall to the next level </string>
    <string name="chat">Chats</string>
    <string name="Support">Supports</string>
    <string name="support_chat">Notify me of new message in the Support chat</string>
    <string name="alert">Alerts</string>
    <string name="prise_alert">Prise Alert Set</string>
    <string name="receive_prise_alert">You will receive prise alerts your previously set </string>
    <string name="communication_of_data">I here by consent to the processing of my personal information by IDNOption  and its partners and related entities for marketing purposes</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string-array name="protfolio_setting">
        <item>% Profit Percentage</item>
        <item>$ profit in Money</item>
        <item>= Asset in Price</item>
    </string-array>

    <string-array name="currency">
        <item> $ USD </item>
        <item> £ GBP </item>
        <item> € EUR </item>
        <item> P RUB </item>
    </string-array>

    <string name="amt_description">You will be redirected to payment gate to process payment</string>

    <string name="authentication">2-Factor authentication protects access to your account with a one-time SMS code when you sign in</string>
    <string name="verifydesc">Increase account security by verifying your phone number</string>

    <string name="password">The password must be atleast 6 character long.include at least one lowercase letter, one uppercase letter, and one number.</string>

    <string-array name="gender_profile">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="chart_type">Chart Type</string>

    <string name="sec5">5s</string>
    <string name="sec10">10s</string>
    <string name="sec15">15s</string>
    <string name="sec30">30s</string>
    <string name="min1">1m</string>
    <string name="heikin_ashi">Heikin-ashi</string>
    <string name="auto_scaling">Auto-scaling</string>
    <string name="use_passcode">Use passcode</string>
    <string name="set_password">Set Password</string>

    <string-array name="countrylist_profile">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote D Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Gaza Strip</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Republic of the Congo</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>US Virgin Islands</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

</resources>
