<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile.Settings.NotificationSettings.NotificationSettingActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/layout_appbar"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="?attr/colorWhiteTransparent">

        <LinearLayout
            android:id="@+id/ll_PushNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_notify"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/switch_PushNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_notify_desc"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="?attr/colorWhiteTransparent">

        <LinearLayout
            android:id="@+id/ll_EmailNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_notify"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_notify_desc"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="?attr/colorWhiteTransparent">

        <LinearLayout
            android:id="@+id/LLPrivacySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Privacy Settings"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>